* vignettes/irace-package.Rnw: Mention that repairConfiguration can be defined in scenario.txt.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1813 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1448,7 +1448,7 @@ repairConfiguration <- function (configuration, parameters, digits)
   return(configuration)
 }
 @
-
+The above code can be directly specified in the \parameter{scenarioFile}, by default \code{scenario.txt}.
 
 \section{Parallelization}\label{sec:parallel}
 A single run of \irace can be done much faster by executing the calls
