* The output of irace now specifies in which order, if any, configurations are printed.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1827 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
 
+ * The output of irace now specifies in which order, if any, configurations are
+   printed.
+                              (Manuel López-Ibáñez, suggested by Markus Wagner)
+ 
  * Several fixes for handling paths in Windows.
                                                      (Manuel López-Ibáñez)
                                                      
