* TODO: mention PAR.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1865 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -136,6 +136,9 @@ TODO General (in order of importance):
    target-runner returns +Inf, just discard the candidate immediately
    without doing any more tests.
 
+ * Add --par integer >= 1 (PAR=), default 1: penalise timeouts or execution
+   failures with PAR * value.
+
  * Implement a regression testing testsuite to check that everything
    is working as expect before making a release. See:
 
