--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -871,10 +871,13 @@ types supported by \irace are the following:
   number of digits of $4$, the values $0.12345$ and
   $0.12341$ are both rounded to $0.1234$.
   % However, the values  $0.00001$ and $0.00005$ remain the same.
+  Selected real-valued parameters can be optionally sampled under
+  a log-scale (base $e$).
 
 \item \textit{Integer} parameters are numerical parameters that can
   take only integer values within the given range. The range is
-  specified as for real parameters.
+  specified as for real parameters. As for real parameters, it is
+  possible to specify a logarithmic distribution.
 
 \item \textit{Categorical} parameters are defined by a set of possible values
   specified as `\code{(<value 1>,} \code{...,} \code{<value n>)}'. The values
@@ -942,7 +945,10 @@ where each field is defined as follows:
   \code{{<type>}} & The type of the parameter, either
                     \textit{integer}, \textit{real}, \textit{ordinal} or
                     \textit{categorical}, given as a single letter: `\code{i}',
-                    `\code{r}', `\code{o}' or `\code{c}'. \\
+                    `\code{r}', `\code{o}' or `\code{c}'. Numerical parameters
+                    can be sampled using a log-scale with '\code{i,log}' and
+                    '\code{r,log}' (without spaces) for integer and real
+                    parameters respectively.\\
                     %
   \code{{<range>}} & The range or set of values of the parameter delimited by
                      parentheses. \eg~\code{(0,1)} or \code{(a,b,c,d)}.\\
@@ -968,18 +974,18 @@ of the \ACOTSP scenario.
 \begin{figure}[!hbt]
 \small\centering%
 \begin{CodeInput}
-# name      switch            type values               [conditions (using R syntax)]
-algorithm   "--"              c    (as,mmas,eas,ras,acs)
-localsearch "--localsearch "  c    (0, 1, 2, 3)
-alpha       "--alpha "        r    (0.00, 5.00)
-beta        "--beta "         r    (0.00, 10.00)
-rho         "--rho  "         r    (0.01, 1.00)
-ants        "--ants "         i    (5, 100)
-nnls        "--nnls "         i    (5, 50)              | localsearch %in% c(1, 2, 3)
-q0          "--q0 "           r    (0.0, 1.0)           | algorithm == "acs"
-dlb         "--dlb "          c    (0, 1)               | localsearch %in% c(1,2,3)
-rasrank     "--rasranks "     i    (1, 100)             | algorithm == "ras"
-elitistants "--elitistants "  i    (1, 750)             | algorithm == "eas"
+# name      switch            type     values               [conditions (using R syntax)]
+algorithm   "--"              c        (as,mmas,eas,ras,acs)
+localsearch "--localsearch "  c        (0, 1, 2, 3)
+alpha       "--alpha "        r        (0.00, 5.00)
+beta        "--beta "         r        (0.00, 10.00)
+rho         "--rho  "         r        (0.01, 1.00)
+ants        "--ants "         i,log    (5, 100)
+nnls        "--nnls "         i        (5, 50)              | localsearch %in% c(1, 2, 3)
+q0          "--q0 "           r        (0.0, 1.0)           | algorithm == "acs"
+dlb         "--dlb "          c        (0, 1)               | localsearch %in% c(1,2,3)
+rasrank     "--rasranks "     i        (1, 100)             | algorithm == "ras"
+elitistants "--elitistants "  i        (1, 750)             | algorithm == "eas"
 \end{CodeInput}
 \caption{Parameter file (\code{parameters.txt}) for tuning \ACOTSP.}\label{fig:acotsp_parameters}
 \end{figure}
