* NEWS: mention log parameters.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1890 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Numerical parameters may be sampled on a logarithmic scale using "i,log"
+   or "r,log".                                               (Alberto Franzin)
+ 
  * New target-runner.bat for Windows contributed by André de Souza Andrade.
   
  * At the end of each race, the best overall may be different than the best of
