Fix for the logarithmic parameters.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1892 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -155,6 +155,14 @@
   pages = {195--212}
 }
 
+@manual{R:mlr,
+  title = {{\Rpackage{mlr}}: Machine Learning in \proglang{R}},
+  author = {Bernd Bischl and Michel Lang and Jakob Bossek and Leonard Judt and Jakob Richter and Tobias Kuehn and Erich Studerus},
+  year = 2013,
+  note = {\proglang{R} package},
+  url = {http://cran.r-project.org/package=mlr}
+}
+
 @incollection{SchHoo2012quanti,
   title = {Quantifying Homogeneity of Instance Sets for
                   Algorithm Configuration},
